--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "expo": "~50.0.0",
-    "expo-router": "^3.5.10",
+    "expo-constants": "~15.4.6",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.10",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@types/react": "^19.2.7"
