--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -1,3 +1,3 @@
-﻿EXPO_PUBLIC_API_URL=http://localhost:8000
+EXPO_PUBLIC_API_URL=http://192.168.0.64:8000
 EXPO_PUBLIC_SUPABASE_URL=
 EXPO_PUBLIC_SUPABASE_ANON_KEY=
