--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpg-tormenta-mobile",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "private": true,
   "version": "0.1.0",
   "scripts": {
@@ -10,16 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "expo-constants": "~15.4.6",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "expo": "~54.0.30",
+    "expo-constants": "~18.0.12",
+    "expo-linking": "~8.0.11",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "^19.2.7"
+    "@types/react": "~19.1.10"
   }
 }
